@@ -1616,3 +1616,7 @@
 
         * elm_object_item : Introduces new APIs, elm_object_item_track(),
         elm_object_item_untrack(), elm_object_item_track_get().
+
+2013-09-14  Daniel Juyung Seo (SeoZ)
+
+        * spinner : fixed arrow key focus movement bug.
